<resources>

    <!-- STATIC_TEXT -->
    <string name="app_name">My Weather App</string>
    <string name="action_settings">Settings</string>
    <string name="tab1">Now</string>
    <string name="tab2">Forecast</string>
    <string name="humidity">Humidity:\ </string>
    <string name="wind">Wind: </string>
    <string name="clouds">Clouds: </string>
    <string name="sunrise">Sunrise: </string>
    <string name="sunset">Sunset: </string>
    <string name="forecast_label">Weekly forecast for</string>
    <string name="refreshing">Refreshing…</string>
    <string name="request_error">Failed to refresh weather.</string>
    <string name="no_network">No network connection.</string>
    <!-- /STATIC_TEXT -->

    <!-- DYNAMIC_TEXT -->
    <string name="main_temp_format">%1$d°C</string>
    <string name="main_temp_1_2_format">%1$s°C…%2$s°C</string> <!-- "&#8230;" is "…" -->
    <string name="main_wind_format">%1$s, %2$s KPH</string>
    <string name="time_h_m_format">%1$s:%2$s</string>
    <string name="forec_item_temp_format">%1$s°C/%2$s°C</string>
    <string name="forec_item_date_format">%1$d/%2$d</string>
    <!-- /DYNAMIC_TEXT -->

    <!-- TEST -->
    <string name="test_temp">--°C</string>
    <string name="test_temp_appr">--°C…--°C</string>
    <string name="test_city">---</string>
    <string name="test_descr">---</string>
    <string name="test_forec_day">---</string>
    <string name="test_forec_date">--/--</string>
    <string name="test_humidity">--%</string>
    <string name="test_wind">NSWE, -.- KPH</string>
    <string name="test_time">--:--</string>
    <!-- /TEST -->
</resources>
