<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_city"
            android:id="@+id/city"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/refresh_btn"
            android:src="@android:drawable/ic_popup_sync"
            android:layout_width="@dimen/now_tab_refresh_btn_size"
            android:layout_height="@dimen/now_tab_refresh_btn_size"
            android:layout_gravity="end"
            android:onClick="onRefreshClick"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/test_temp"
            android:id="@+id/main_temp"
            android:textSize="72sp"
            android:textStyle="bold"
            android:layout_span="2"
            android:layout_gravity="center_horizontal"
            android:layout_column="0" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/appr_temp"
            android:text="@string/test_temp_appr"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_span="2"
            android:layout_marginBottom="10dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/test_descr"
            android:id="@+id/description"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="@dimen/now_tab_icon_size"
            android:layout_height="@dimen/now_tab_icon_size"
            android:layout_weight="1"
            android:id="@+id/weather_icon"
            android:src="@android:drawable/ic_menu_report_image"
            android:layout_gravity="right" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/humidity"
            android:id="@+id/humidity"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/test_humidity"
            android:id="@+id/humidity_val"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/wind"
            android:id="@+id/wind"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/test_wind"
            android:id="@+id/wind_val"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sunrise"
            android:id="@+id/sunrise"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/test_time"
            android:id="@+id/sunrise_val"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sunset"
            android:id="@+id/sunset"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/test_time"
            android:id="@+id/sunset_val"
            android:textSize="18sp" />
    </TableRow>

</TableLayout>
